[gd_scene load_steps=5 format=3 uid="uid://bytueg3x4ab36"]

[ext_resource type="Script" path="res://Screens/home_menu.gd" id="1_7atax"]
[ext_resource type="Texture2D" uid="uid://bmtoqyhb2rsp2" path="res://Assets/Screens/mainmenu.png" id="1_ukwnr"]
[ext_resource type="Theme" uid="uid://xn2hdy3rgr76" path="res://Assets/UI/theme.tres" id="2_17r3x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kuuvh"]
bg_color = Color(0.670588, 0.321569, 0.211765, 1)

[node name="HomeMenu" type="Node2D"]
script = ExtResource("1_7atax")

[node name="Mainmenu" type="Sprite2D" parent="."]
position = Vector2(576, 323)
scale = Vector2(4.5, 5.07813)
texture = ExtResource("1_ukwnr")

[node name="PlayButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 384.0
offset_right = 736.0
offset_bottom = 632.0
theme = ExtResource("2_17r3x")
theme_override_styles/normal = SubResource("StyleBoxFlat_kuuvh")
text = "PLAY"

[node name="LeaderboardButton" type="Button" parent="."]
offset_left = 768.0
offset_top = 568.0
offset_right = 1139.0
offset_bottom = 632.0
theme = ExtResource("2_17r3x")
theme_override_styles/normal = SubResource("StyleBoxFlat_kuuvh")
text = "LEADERBOARD"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 768.0
offset_top = 384.0
offset_right = 1139.0
offset_bottom = 448.0
theme = ExtResource("2_17r3x")
theme_override_styles/normal = SubResource("StyleBoxFlat_kuuvh")
text = "CREDITS"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
